--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ runs:
         ARTIFACT_NAME: ${{ inputs.artifact-name }}
     - name: 'Export content'
       id: content
-      run: echo "CONTENT=$(cat $ARTIFACT_NAME.txt)" >> $GITHUB_OUTPUT
+      run: echo "CONTENT=$(cat $ARTIFACT_NAME)" >> $GITHUB_OUTPUT
       shell: bash
       env:
         ARTIFACT_NAME: ${{ inputs.artifact-name }}
